# graphanalyzer

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/graphanalyzer/: __init__.py  gfareader.py  graphanalyzer.py
tests/: test_graphanalyzer.py
